Broadening Compatibility
The program now is at language level 8 to allow it to work with more versions of Java.